# UT3_Control_And_Data_Acquisition_System

./: .gitignore  CMakeLists.txt  CmakeTangoWin.cmake  README.md
.github/workflows/: cmake-single-platform.yml
CameraServer/: CMakeLists.txt  ClassFactory.cpp  TANGOCamera.cpp  TANGOCamera.h  TANGOCamera.xmi  TANGOCameraClass.cpp  TANGOCameraClass.h  TANGOCameraStateMachine.cpp  main.cpp
CameraServer/CameraDriver/: CameraDriver.cpp  CameraDriver.h  CameraDriverCreator.h  CameraDriverFactory.cpp  CameraDriverFactory.h
DAQClient/: README.md  pyproject.toml
DAQClient.C++/: CMakeLists.txt  testClient.cpp
DAQClient/daqclient/: acquire.py  logging.py
DAQClient/tests/daqclient/: test_logging.py
DeviceServer/CameraServer/: CMakeLists.txt  TANGOCamera.cpp  TANGOCamera.h  TANGOCamera.xmi  TANGOCameraClass.cpp  TANGOCameraClass.h  TANGOCameraDynAttrUtils.cpp  TANGOCameraStateMachine.cpp  main.cpp
DeviceServer/CameraServer/CameraDriver/: CameraDriver.cpp  CameraDriver.h  CameraDriverFactory.cpp
DeviceServer/DG656/: CMakeLists.txt  Hooks.h  MultiClassesFactory.cpp  StanfordDG645.multi.xmi  StanfordDG645Common.h  main.cpp
DeviceServer/DG656/StanfordDG645Channel/: CMakeLists.txt  ClassFactory.cpp  Makefile  StanfordDG645Channel.cpp  StanfordDG645Channel.h  StanfordDG645Channel.xmi  StanfordDG645ChannelClass.cpp  StanfordDG645ChannelClass.h  StanfordDG645ChannelDynAttrUtils.cpp  StanfordDG645ChannelStateMachine.cpp  main.cpp
DeviceServer/DG656/StanfordDG645Control/: CMakeLists.txt  ClassFactory.cpp  Makefile  StanfordDG645Control.cpp  StanfordDG645Control.h  StanfordDG645Control.xmi  StanfordDG645ControlClass.cpp  StanfordDG645ControlClass.h  StanfordDG645ControlStateMachine.cpp  main.cpp
DeviceServer/DG656/doc/doc_html/StanfordDG645Channel/: AttrBurstMode.html  AttrOutputAmplitude.html  AttrOutputOffset.html  AttrOutputWidth.html  AttrTriggerDelay.html  AttrTriggerPhase.html  AttrTriggerPrescale.html  Attributes.html  ClassDescription.html  CmdState.html  CmdStatus.html  Commands.html  FullDocument.html  Properties.html  States.html  TitleBanner.html  index.html
DeviceServer/DG656/doc/doc_html/StanfordDG645Control/: AttrBurstCount.html  AttrBurstDelay.html  AttrBurstMode.html  AttrBurstPeriod.html  AttrDeviceFirmwareVersion.html  AttrDeviceSerialNumber.html  AttrTriggerHoldoff.html  AttrTriggerMode.html  AttrTriggerPrescale.html  AttrTriggerRate.html  AttrTriggerThreshold.html  Attributes.html  ClassDescription.html  CmdLoadDefaults.html  CmdLoadSettings.html  CmdSaveSettings.html  CmdSingleShot.html  CmdState.html  CmdStatus.html  CmdWriteRead.html  Commands.html  FullDocument.html  Properties.html  States.html  TitleBanner.html  index.html
DeviceServer/Newport8742/Newport8742Axis/: CMakeLists.txt  ClassFactory.cpp  Newport8742Axis.cpp  Newport8742Axis.h  Newport8742Axis.xmi  Newport8742AxisClass.cpp  Newport8742AxisClass.h  Newport8742AxisMoveThread.cpp  Newport8742AxisMoveThread.h  Newport8742AxisStateMachine.cpp  main.cpp
DeviceServer/Newport8742/Newport8742Controller/: CMakeLists.txt  ClassFactory.cpp  NewPort8742Ctrl.cpp  NewPort8742Ctrl.h  NewPort8742Ctrl.xmi  NewPort8742CtrlClass.cpp  NewPort8742CtrlClass.h  NewPort8742CtrlStateMachine.cpp  main.cpp
DeviceServer/Newport8742/Newport8742Controller/ctrl/: Makefile  main.cpp  newport8742.cpp  newport8742.h
DeviceServer/TestServer/TestTimingDistributionServer/: CMakeLists.txt  ClassFactory.cpp  TestTimingDistributionUnit.cpp  TestTimingDistributionUnit.h  TestTimingDistributionUnit.xmi  TestTimingDistributionUnitClass.cpp  TestTimingDistributionUnitClass.h  TestTimingDistributionUnitStateMachine.cpp  main.cpp
DeviceServer/TimingDistributionServer/: CMakeLists.txt  ClassFactory.cpp  TimingDistributionUnit.cpp  TimingDistributionUnit.h  TimingDistributionUnit.xmi  TimingDistributionUnitClass.cpp  TimingDistributionUnitClass.h  TimingDistributionUnitStateMachine.cpp  main.cpp
DeviceServer/TimingUnitServer/: CMakeLists.txt  ClassFactory.cpp  TimingUnit.cpp  TimingUnit.h  TimingUnit.xmi  TimingUnitClass.cpp  TimingUnitClass.h  TimingUnitDriver.cpp  TimingUnitDriver.h  TimingUnitStateMachine.cpp  main.cpp
Firmwares/UT3_TriggerFanoutBox/: .cproject  .gitignore  .project  project0.c  startup_ccs.c
ImageProcessing/: README.md
RunControl/: CMakeLists.txt  MariaDBController.cpp  MariaDBController.h  beamlinediagnosticsimageviewer.cpp  beamlinediagnosticsimageviewer.h  beamlinediagnosticsimageviewer.ui  callback.cpp  callback.h  databaseauthdialog.cpp  databaseauthdialog.h  databaseauthdialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  triggercallback.cpp  triggercallback.h  warningonmissingbasepath.cpp  warningonmissingbasepath.h  warningonmissingbasepath.ui
RunControl/SQL/: CreateSchema.sql
